--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                 <img id="pic" src="pic.png">
             </div>
             <div id="icons">
-                <a href="https://twitter.com/rohan__sanjay" class="fa fa-twitter"></a>
-                <a href="https://github.com/rohansanjay" class="fa fa-github"></a>
-                <a href="https://www.linkedin.com/in/rohansanjay/" class="fa fa-linkedin"></a>
-                <a href="https://www.instagram.com/rohan__sanjay/" class="fa fa-instagram"></a>
+                <a href="https://twitter.com/rohan__sanjay" class="fa fa-twitter" target="_blank"></a>
+                <a href="https://github.com/rohansanjay" class="fa fa-github" target="_blank"></a>
+                <a href="https://www.linkedin.com/in/rohansanjay/" class="fa fa-linkedin" target="_blank"></a>
+                <a href="https://www.instagram.com/rohan__sanjay/" class="fa fa-instagram" target="_blank"></a>
             </div>
         </div>
     </body>
