open links in new tab

--- a/about/about.html
+++ b/about/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/285/waving-hand_1f44b.png">
-    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="about.css"/>
     <title>Rohan Sanjay</title>
   </head>
 
@@ -15,9 +15,9 @@
 
       <h1 class="subtitle">
         contact me via
-        <a href="mailto:rohanpsanjay@gmail.com">email</a> or view my
-        <a href="https://github.com/rohansanjay">github</a>
-        &amp; <a href="https://twitter.com/rohan__sanjay">twitter</a>
+        <a href="mailto:rohanpsanjay@gmail.com" target="_blank">email</a> or view my
+        <a href="https://github.com/rohansanjay" target="_blank">github</a>
+        &amp; <a href="https://twitter.com/rohan__sanjay" target="_blank">twitter</a>
       </h1>
 
     </div>
@@ -60,9 +60,9 @@
 
     <div id="footer">
         <p class = "footer"><i>This website was modified from
-            <a href="https://github.com/gakonst/gakonst.github.io"/>gakonst's fork</a> of 
-            <a href="https://github.com/transmissions11/transmissions11.github.io"/>t11's fork</a> of the
-            <a href="https://github.com/dapphub/dapp-tools"/>dapptools</a> website</i></p>
+            <a href="https://github.com/gakonst/gakonst.github.io" target="_blank">gakonst's fork</a> of 
+            <a href="https://github.com/transmissions11/transmissions11.github.io" target="_blank">t11's fork</a> of the
+            <a href="https://github.com/dapphub/dapp-tools" target="_blank">dapptools</a> website</i></p>
       <br />
   </body>
 </html>
