--- a/about/about.html
+++ b/about/about.html
@@ -15,9 +15,9 @@
 
       <h1 class="subtitle">
         contact me via
-        <a href="mailto:rohanpsanjay@gmail.com" target="_blank">email</a> or view my
+        <a href="mailto:rohanpsanjay@gmail.com" target="_blank">email</a> 
+        &amp; <a href="https://twitter.com/rohan__sanjay" target="_blank">twitter</a> or view my
         <a href="https://github.com/rohansanjay" target="_blank">github</a>
-        &amp; <a href="https://twitter.com/rohan__sanjay" target="_blank">twitter</a>
       </h1>
 
     </div>
@@ -59,7 +59,7 @@
     <hr>
 
     <div id="footer">
-        <p class = "footer"><i>This website was modified from
+        <p class = "footer"><i>This was modified from
             <a href="https://github.com/gakonst/gakonst.github.io" target="_blank">gakonst's fork</a> of 
             <a href="https://github.com/transmissions11/transmissions11.github.io" target="_blank">t11's fork</a> of the
             <a href="https://github.com/dapphub/dapp-tools" target="_blank">dapptools</a> website</i></p>
