--- a/about/about.html
+++ b/about/about.html
@@ -11,13 +11,15 @@
   <body>
     <div id="preamble">
 
-      <h1 class="title">Rohan Sanjay</h1>
+      <h1 class="title">
+            <a href="../index.html" class="title">Rohan Sanjay</a>
+      </h1>
 
       <h1 class="subtitle">
-        contact me via
-        <a href="mailto:rohanpsanjay@gmail.com" target="_blank">email</a> 
-        &amp; <a href="https://twitter.com/rohan__sanjay" target="_blank">twitter</a> or view my
-        <a href="https://github.com/rohansanjay" target="_blank">github</a>
+            contact me via
+            <a href="mailto:rohanpsanjay@gmail.com" target="_blank">email</a> 
+            &amp; <a href="https://twitter.com/rohan__sanjay" target="_blank">twitter</a> or view my
+            <a href="https://github.com/rohansanjay" target="_blank">github</a>
       </h1>
 
     </div>
