--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <a href="https://github.com/rohansanjay" class="fa fa-github" target="_blank"></a>
                 <a href="https://www.linkedin.com/in/rohansanjay/" class="fa fa-linkedin" target="_blank"></a>
                 <a href="https://www.instagram.com/rohan__sanjay/" class="fa fa-instagram" target="_blank"></a>
+                <a href="about/about.html" class="fa fa-question"></a>
             </div>
         </div>
     </body>
