--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="css/index.css">
         <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/285/waving-hand_1f44b.png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Rohan Sanjay</title>
@@ -11,14 +11,14 @@
     <body>
         <div id="content">        
             <div>
-                <img id="pic" src="pic.png">
+                <img id="pic" src="assets/pic.png">
             </div>
             <div id="icons">
                 <a href="https://twitter.com/rohan__sanjay" class="fa fa-twitter" target="_blank"></a>
                 <a href="https://github.com/rohansanjay" class="fa fa-github" target="_blank"></a>
                 <a href="https://www.linkedin.com/in/rohansanjay/" class="fa fa-linkedin" target="_blank"></a>
                 <a href="https://www.instagram.com/rohan__sanjay/" class="fa fa-instagram" target="_blank"></a>
-                <a href="about/about.html" class="fa fa-question"></a>
+                <a href="about.html" class="fa fa-question"></a>
             </div>
         </div>
     </body>
