--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/285/waving-hand_1f44b.png">
-    <link rel="stylesheet" href="about.css"/>
+    <link rel="stylesheet" href="css/about.css"/>
     <title>Rohan Sanjay</title>
   </head>
 
@@ -12,7 +12,7 @@
     <div id="preamble">
 
       <h1 class="title">
-            <a href="../index.html" class="title">Rohan Sanjay</a>
+            <a href="index.html" class="title">Rohan Sanjay</a>
       </h1>
 
       <h1 class="subtitle">
