--- a/about.html
+++ b/about.html
@@ -28,7 +28,6 @@
         <p><b>
             INSERT HEADER
         </p></b>
-
     </div>
 
     <hr>
@@ -36,7 +35,14 @@
     <div>
         <h1>Currently</h1>
             <ul>
-                <li>List</li>
+                <li>Building the future of cross-chain yield @ <a href="https://www.joinargo.com/" target="_blank"><code>Argo</code></a></li>
+                <li>Launching an NFT betting platform @ <a href="https://www.nftrumble.xyz/" target="_blank"><code>NFTrumble</code></a></li>
+                <li>Founding USC's hub for DeFi innovation @ <a href="https://www.defisc.org/" target="_blank"><code>DeFi SC</code></a></li>
+                <li>Advising USC's first quant finance org I founded @ <a href="https://www.quantsc.org/" target="_blank"><code>Quant SC</code></a></li>
+                <!-- <li><a href="https://www.joinargo.com/" target="_blank"><code>Argo</code></a>: building the future of cross-chain yield</li>
+                <li><a href="https://www.nftrumble.xyz/" target="_blank"><code>NFTrumble</code></a>: launching an NFT betting platform</li>
+                <li><a href="https://www.defisc.org/" target="_blank"><code>DeFi SC</code></a>: founding USC's hub for DeFi innovation</li>
+                <li><a href="https://www.quantsc.org/" target="_blank"><code>Quant SC</code></a>: advising USC's premier quant finance org</li> -->
             </ul>
     </div>
 
@@ -45,16 +51,23 @@
     <div>
         <h1>Previously</h1>
             <ul>
-                <li>List</li>
+                <li>Built DeFi structured yield products @ <a href="https://www.katana.so/" target="_blank"><code>Katana</code></a></li>
+                <li>Quant trading and software engineering @ <a href="https://www.imc.com/" target="_blank"><code>IMC Trading</code></a></li>
+                <li>Video analytics and data engineering @ <a href="https://www.dragonfruit.ai/" target="_blank"><code>Dragonfruit AI</code></a></li>
+                <li>Developed algorithmic trading strategies @ <a href="https://www.blackboxtradingca.com/" target="_blank"><code>Blackbox Trading</code></a></li>
+                <li>Researched probabilistic guarantees for time series @ <a href="https://cps-vida.github.io/" target="_blank"><code>CPS-VIDA Lab</code></a></li>
             </ul>
     </div>
 
     <hr>
 
     <div>
-        <h1>Other</h1>
+        <h1>Perpetually</h1>
             <ul>
-                <li>List</li>
+                <li>Learning about the world @ <a href="https://www.github.com/rohansanjay/reading/" target="_blank"><code>reading</code></a></li>
+                <li>Listening to people and stories @ <a href="https://github.com/rohansanjay/lists/blob/main/podcasts.md" target="_blank"><code>podcasts</code></a></li>
+                <li>Believing in wisdom @ <a href="https://github.com/rohansanjay/lists/blob/main/quotes.md" target="_blank"><code>quotes</code></a></li>
+                <li>Feeling inspired @ <a href="https://github.com/rohansanjay/lists/blob/main/documentaries.md" target="_blank"><code>documentaries</code></a></li>
             </ul>
     </div>
 
