--- a/about.html
+++ b/about.html
@@ -64,10 +64,10 @@
     <div>
         <h1>Perpetually</h1>
             <ul>
-                <li>Learning about the world @ <a href="https://www.github.com/rohansanjay/reading/" target="_blank"><code>reading</code></a></li>
-                <li>Listening to people and stories @ <a href="https://github.com/rohansanjay/lists/blob/main/podcasts.md" target="_blank"><code>podcasts</code></a></li>
-                <li>Believing in wisdom @ <a href="https://github.com/rohansanjay/lists/blob/main/quotes.md" target="_blank"><code>quotes</code></a></li>
-                <li>Feeling inspired @ <a href="https://github.com/rohansanjay/lists/blob/main/documentaries.md" target="_blank"><code>documentaries</code></a></li>
+                <li>Learning about the world @ <a href="https://www.github.com/rohansanjay/reading/" target="_blank"><code>Reading</code></a></li>
+                <li>Listening to people and stories @ <a href="https://github.com/rohansanjay/lists/blob/main/podcasts.md" target="_blank"><code>Podcasts</code></a></li>
+                <li>Believing in wisdom @ <a href="https://github.com/rohansanjay/lists/blob/main/quotes.md" target="_blank"><code>Quotes</code></a></li>
+                <li>Feeling inspired @ <a href="https://github.com/rohansanjay/lists/blob/main/documentaries.md" target="_blank"><code>Documentaries</code></a></li>
             </ul>
     </div>
 
