--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 
     <div id = "intro">
         <p><b>
-            INSERT HEADER
+            <center>In relentless pursuit of my Personal Legend.</center>
         </p></b>
     </div>
 
@@ -39,10 +39,6 @@
                 <li>Launching an NFT betting platform @ <a href="https://www.nftrumble.xyz/" target="_blank"><code>NFTrumble</code></a></li>
                 <li>Founding USC's hub for DeFi innovation @ <a href="https://www.defisc.org/" target="_blank"><code>DeFi SC</code></a></li>
                 <li>Advising USC's first quant finance org I founded @ <a href="https://www.quantsc.org/" target="_blank"><code>Quant SC</code></a></li>
-                <!-- <li><a href="https://www.joinargo.com/" target="_blank"><code>Argo</code></a>: building the future of cross-chain yield</li>
-                <li><a href="https://www.nftrumble.xyz/" target="_blank"><code>NFTrumble</code></a>: launching an NFT betting platform</li>
-                <li><a href="https://www.defisc.org/" target="_blank"><code>DeFi SC</code></a>: founding USC's hub for DeFi innovation</li>
-                <li><a href="https://www.quantsc.org/" target="_blank"><code>Quant SC</code></a>: advising USC's premier quant finance org</li> -->
             </ul>
     </div>
 
