--- a/about.html
+++ b/about.html
@@ -48,8 +48,8 @@
         <h1>Previously</h1>
             <ul>
                 <li>Built DeFi structured yield products @ <a href="https://www.katana.so/" target="_blank"><code>Katana</code></a></li>
-                <li>Quant trading and software engineering @ <a href="https://www.imc.com/" target="_blank"><code>IMC Trading</code></a></li>
-                <li>Video analytics and data engineering @ <a href="https://www.dragonfruit.ai/" target="_blank"><code>Dragonfruit AI</code></a></li>
+                <li>Quant traded and software engineered @ <a href="https://www.imc.com/" target="_blank"><code>IMC Trading</code></a></li>
+                <li>Tracked objects in videos and data engineered @ <a href="https://www.dragonfruit.ai/" target="_blank"><code>Dragonfruit AI</code></a></li>
                 <li>Developed algorithmic trading strategies @ <a href="https://www.blackboxtradingca.com/" target="_blank"><code>Blackbox Trading</code></a></li>
                 <li>Researched probabilistic guarantees for time series @ <a href="https://cps-vida.github.io/" target="_blank"><code>CPS-VIDA Lab</code></a></li>
             </ul>
