personal legend link

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 
     <div id = "intro">
         <p><b>
-            <center>In relentless pursuit of my Personal Legend.</center>
+            <center>In relentless pursuit of my <a href="https://github.com/rohansanjay/reading/blob/main/fiction/The_Alchemist.md#key-words" target="_blank">Personal Legend</a>.</center>
         </p></b>
     </div>
 
