text align center

--- a/about.html
+++ b/about.html
@@ -25,8 +25,8 @@
     </div>
 
     <div id = "intro">
-        <p><b>
-            <center>In relentless pursuit of my <a href="https://github.com/rohansanjay/reading/blob/main/fiction/The_Alchemist.md#key-words" target="_blank">Personal Legend</a>.</center>
+        <p class="intro"><b>
+            In relentless pursuit of my <a href="https://github.com/rohansanjay/reading/blob/main/fiction/The_Alchemist.md#key-words" target="_blank">Personal Legend</a>.
         </p></b>
     </div>
 
