--- a/about.html
+++ b/about.html
@@ -38,7 +38,6 @@
                 <li>Building the future of cross-chain yield @ <a href="https://www.joinargo.com/" target="_blank"><code>Argo</code></a></li>
                 <li>Launching an NFT betting platform @ <a href="https://www.nftrumble.xyz/" target="_blank"><code>NFTrumble</code></a></li>
                 <li>Founding USC's hub for DeFi innovation @ <a href="https://www.defisc.org/" target="_blank"><code>DeFi SC</code></a></li>
-                <li>Advising USC's first quant finance org I founded @ <a href="https://www.quantsc.org/" target="_blank"><code>Quant SC</code></a></li>
             </ul>
     </div>
 
@@ -49,6 +48,7 @@
             <ul>
                 <li>Built DeFi structured yield products @ <a href="https://www.katana.so/" target="_blank"><code>Katana</code></a></li>
                 <li>Quant traded and software engineered @ <a href="https://www.imc.com/" target="_blank"><code>IMC Trading</code></a></li>
+                <li>Founded USC's first quant finance org @ <a href="https://www.quantsc.org/" target="_blank"><code>Quant SC</code></a></li>
                 <li>Tracked objects in videos and data engineered @ <a href="https://www.dragonfruit.ai/" target="_blank"><code>Dragonfruit AI</code></a></li>
                 <li>Developed algorithmic trading strategies @ <a href="https://www.blackboxtradingca.com/" target="_blank"><code>Blackbox Trading</code></a></li>
                 <li>Researched probabilistic guarantees for time series @ <a href="https://cps-vida.github.io/" target="_blank"><code>CPS-VIDA Lab</code></a></li>
