--- a/about.html
+++ b/about.html
@@ -49,8 +49,7 @@
                 <li>Built DeFi structured yield products @ <a href="https://www.katana.so/" target="_blank"><code>Katana</code></a></li>
                 <li>Quant traded and software engineered @ <a href="https://www.imc.com/" target="_blank"><code>IMC Trading</code></a></li>
                 <li>Founded USC's first quant finance org @ <a href="https://www.quantsc.org/" target="_blank"><code>Quant SC</code></a></li>
-                <li>Tracked objects in videos and data engineered @ <a href="https://www.dragonfruit.ai/" target="_blank"><code>Dragonfruit AI</code></a></li>
-                <li>Developed algorithmic trading strategies @ <a href="https://www.blackboxtradingca.com/" target="_blank"><code>Blackbox Trading</code></a></li>
+                <li>Tracked objects in videos using ML @ <a href="https://www.dragonfruit.ai/" target="_blank"><code>Dragonfruit AI</code></a></li>
                 <li>Researched probabilistic guarantees for time series @ <a href="https://cps-vida.github.io/" target="_blank"><code>CPS-VIDA Lab</code></a></li>
             </ul>
     </div>
@@ -70,10 +69,9 @@
     <hr>
 
     <div id="footer">
-        <p class = "footer"><i>This was modified from
-            <a href="https://github.com/gakonst/gakonst.github.io" target="_blank">gakonst's fork</a> of 
-            <a href="https://github.com/transmissions11/transmissions11.github.io" target="_blank">t11's fork</a> of the
-            <a href="https://github.com/dapphub/dapp-tools" target="_blank">dapptools</a> website</i></p>
+        <p class = "footer"><i>Credits to 
+            <a href="https://github.com/gakonst/gakonst.github.io" target="_blank">gakonst</a> and 
+            <a href="https://github.com/transmissions11/transmissions11.github.io" target="_blank">t11s</a> for the webpage design
       <br />
   </body>
 </html>
